--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
 tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
+tower-http = { version = "0.6.6", features = ["cors"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 yup-oauth2 = { version = "12.1.0", features = ["service_account"] }
