--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2024"
 
 [dependencies]
 axum = { version = "0.8.4", features = ["ws"] }
+chrono = "0.4.41"
 futures-util = "0.3.31"
+jsonwebtoken = "9.3.1"
 reqwest = { version = "0.12.20", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
